# rs_hancock_read_bin

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test.rs
