[package]
name = "rs_open_hancock_bin"
version = "0.1.0"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.12.0"
structopt = { version = "^0.3" }
threadpool = "1.0"
