[package]
name = "tls_read_hancock_bin"
version = "0.1.1"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Reader for the Hancock terrestrial LiDAR binary polar format, see https://bitbucket.org/StevenHancock/libclidar."
readme = "README.md"
homepage = "https://github.com/caiohamamura/rs_hancock_read_bin"
repository = "https://github.com/caiohamamura/rs_hancock_read_bin"
keywords = ["TLS", "LiDAR"]
categories = ["science"]
